# simple-chatboot

./: .gitignore  LICENSE  README.md  chat.py  etl.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
simple_chatbot/: chatbot.py  etl.py  vo.py
tests/: test_chat.py  test_etl.py
