[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_chatbot"
authors = [{name = "sad-zero", email = "zeroro.yun@gmail.com"}]
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.black]
line-length=120
target-version=["py312"]

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_chatbot"]